Revision history for Perl extension App::Info.

0.31

0.30  2004-11-20T19:10:55
      - Fixed number of tests to skip in "sqlite_info.t" for systems that
        don't have SQLite installed. Reported by numerous CPAN testers.
      - Fixed carp.t to be compatable with older Perls.
      - Added new C<lib_dirs()> method to App::Info::Util to centrally handle
        the parsing and returning of typical library directories as defined by
        the "libsdirs" and "loclibpth" Config settings.
      - Added /sw/lib to the list of library diretories to search for
        SQLite libraries.
      - Only loading DBI in App::Info::RDBMS::SQLite if a version of
        DBD::SQLite is known to be installed, rather than at compile
        time.
      - Fixed tests in sqlite_info.t to work properly on Windows.

0.29  2004-11-20T00:09:22
      - Added App::Info::RDBMS::SQLite to the MANIFEST so that it will
        actually show up in the distribution!

0.28  2004-11-19T23:35:25
      - Added App::Info::RDBMS::SQLite.

0.27  2004-11-19T02:27:50
      - Now using quotes when passing an executable path to `` in the
        Apache and PostgreSQL libraries so that they work properly when
        there are spaces in the path (such as on Windows). Reported by
        Geoff Richards.
      - Added "configure()" method to the PostgreSQL library. From the
        DBD::Pg project.
      - Added Windows support to the PostgreSQL module.

0.26  2004-11-03T17:53:58
      - Added new path to list of paths to search for PostgreSQL. The new
        path, /usr/lib/postgresql/bin, is used by at least one Debian package.
        Submitted by Cinly Ooi.
      - Added support for Apache on Windows. Patch from Ron Savage.

0.25  Thu Dec 11 20:50:43 2004
      - Fixed parsing of version numbers for new releases of PostgreSQL,
        which don't include the ".0" patch version in their version numbers.

0.24  Tue Aug 26 00:58:55 2004
      - Fixed broken link in App::Info::Request documentation.